2007-01-08  Clark Williams  <williams@redhat.com>
	* Makefile
	changed archive creation to keep tarball clean

	* etc/fedora-4-*
	added Josh Boyer's EPEL config files

	* mock.spec
	bumped version to 0.6.10
	
2006-10-30  Clark Williams  <williams@redhat.com>

	* Makefile
	Bumped version to 0.6.7 for FC6 release

	* etc/fedora-6-*
	Added for FC6 release

2006-10-21  Clark Williams  <williams@redhat.com>

	* mock.spec
	Bumped version to 0.6.6

2006-09-11 11:21  jcwillia
	* mock.py
	added patch from Karanbir Singh to fix RPM problem in 
	CentOS 4.4

	* mock.spec
	bumped version to 0.6.5

2006-08-29 05:16  jcwillia

	* mock.py
	explicit import of rpmUtils.transaction 
	(BZ#204051)

2006-08-25 16:40  jcwillia

	* buildsys-build.spec
	Dennis Gilmore's patches for Aurora SPARC Linux 
	(BZ#204100)
	
2006-08-17 20:28  jcwillia
	
	* etc/redhat-73-i386.cfg, etc/redhat-9-i386.cfg:
	added runuser config option for legacy config files
	
	* mock.py
	updated usage message
	
	* doc/mock.1
	reworked man page to include caching options, chroot and shell
	commands. 
	(BZ#200080)

2006-08-17 20:23  jcwillia
	
	* etc/redhat-8-i386.cfg:
	added template for RHL8
	
2006-08-16 16:59  jcwillia

	* mock.spec
	added disttags
	
	* mock.py
	added check for basedir change and raise error when it's detected
	(BZ#1644441)
	
	
2006-08-07 17:26  jcwillia
	
	* buildsys-build.spec
	added rhel tags

	* Makefile
	Modified to build all supported targets for buildsys-build

2006-08-07 15:05  jcwillia

	* buildsys-build.spec
	Thorsten Leemhuis and Paul Howarth's patches for RHL and Legacy
	chroots.
	(BZ#196930)
	
2006-06-13 01:31  skvidal

	* etc/defaults.cfg: 
	add cache defaults

2006-06-13 01:16  skvidal

	* ChangeLog: 
	check in changelog

2006-06-13 01:15  skvidal

	* etc/defaults.cfg: 
	correct commented-out groupinstall option

2006-06-13 00:28  skvidal

	* etc/: fedora-3-i386-core.cfg, fedora-3-x86_64-core.cfg,
	fedora-4-i386-core.cfg, fedora-4-ppc-core.cfg,